# CT_EVKBMIMXRT1052_Hello

./: .gitignore  CMakeLists.txt  flags.cmake  hello_world.mex  mcux_config.cmake
CMSIS/: CMSIS_Include_core_cm_MIMXRT1052.cmake
board/: clock_config.c  clock_config.h  dcd.c  peripherals.c  pin_mux.c  pin_mux.h
component/lists/: component_lists_MIMXRT1052.cmake
component/uart/: component_lpuart_adapter_MIMXRT1052.cmake
device/: device_MIMXRT1052_CMSIS_MIMXRT1052.cmake  device_MIMXRT1052_system_MIMXRT1052.cmake
drivers/: driver_clock_MIMXRT1052.cmake  driver_common_MIMXRT1052.cmake  driver_igpio_MIMXRT1052.cmake  driver_iomuxc_MIMXRT1052.cmake  driver_lpuart_MIMXRT1052.cmake
startup/: device_MIMXRT1052_startup_MIMXRT1052.cmake
utilities/: utility_assert_lite_MIMXRT1052.cmake  utility_debug_console_lite_MIMXRT1052.cmake
xip/: driver_xip_board_evkbimxrt1050_MIMXRT1052.cmake  driver_xip_device_MIMXRT1052.cmake
